# bitvec

./: Cargo.toml  Justfile  meson.build  meson_options.txt
examples/: foreign.cpp
ffi/: Doxyfile  bitslice.h  bitslice.hpp  bitvec.h  bitvec.hpp
ffi/bitvec/: bitslice.h  bitslice.hpp  bitvec.h  bitvec.hpp
src/: ffi.rs  lib.rs
src/ffi/: slice.rs  vec.rs
